@@ -1,6 +1,8 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Fix test failures (#77, #78)
+    - Fix, extend and document ImageFromCode filter (#79)
 
 0.34  2018-04-18 09:46:41 CEST
     - Extend metadata value method with JSON Pointer and options (#73)
